--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:qBZRSbcvAb6YswpLde4zBxP523J1gbpO9uRrnw+P8Io=
+APP_KEY=base64:ln+IHG9DPjdNCBwKJllvnLMzDDZRsB2fshzxo691SF4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=orderbook
+DB_USERNAME=nest
+DB_PASSWORD=nest
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -56,3 +56,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_TIMEOUT=10
+API_CURRENCY_PAIR="EURUSD"
+API_URL="https://api.kraken.com/0/public/Depth?pair=${API_CURRENCY_PAIR}"
