--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ln+IHG9DPjdNCBwKJllvnLMzDDZRsB2fshzxo691SF4=
-APP_DEBUG=true
-APP_URL=http://localhost/test
+APP_DEBUG=false
+APP_URL=http://localhost/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
